cert-manager-lab/deplyment-sampleApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: kuard
          ports:
            - containerPort: 80
