cert-manager-lab/service-sampleApp.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: kuard
